--- a/.github/workflows/gke-deploy-workflow.yml
+++ b/.github/workflows/gke-deploy-workflow.yml
@@ -39,17 +39,12 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
-
       - name: Initialize Terraform
         run: terraform init
 
-
-        
       - name: Terraform Plan
-
-        run: terraform plan -out=tfplan
+        run: terraform plan -out=tfplan -var="create_cluster=true" #Pass variable
         id: plan
 
       - name: Terraform Apply
-
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve tfplan -var="create_cluster=true" #Pass variable
