--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -25,16 +25,23 @@ jobs:
           credentials_json: ${{ secrets.GCP_ACCESS_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      # --- Get Cluster Info from Terraform ---
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-      - name: Initialize Terraform
-        run: terraform init
-        working-directory: ./TerraformOnGCP/GKE
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          install_components: gke-gcloud-auth-plugin
 
       - name: Configure gcloud and kubectl
         run: |
-          gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
+          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
+          kubectl config set-context --current --namespace=default
+          kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.cmd-args "config config-helper --format=json"
+          kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.cmd-path "$(which gke-gcloud-auth-plugin)"
+          kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.expiry-key "{.credential.token_expiry}"
+          kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.token-key "{.credential.access_token}"
+          kubectl config set users.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.name "gcp"
+          kubectl get clusterrolebindings
           kubectl get pods -A
 
       - name: Create Argo CD Namespace
@@ -48,7 +55,10 @@ jobs:
 
       - name: Create Ansible Inventory Directory
         run: mkdir -p ansible/inventory
-
+      - name: Set up Terraform # Required for Ansible inventory
+        uses: hashicorp/setup-terraform@v2
+      - name: Initialize Terraform
+        run: terraform init
       - name: Configure Dynamic Inventory (gcp.yml)
         run: |
           cat <<EOF > ansible/inventory/gcp.yml
@@ -62,3 +72,14 @@ jobs:
           service_account_file: ${{ steps.auth.outputs.credentials_file_path }}
           EOF
         shell: bash
+
+      - name: Install google.cloud collection
+        run: ansible-galaxy collection install google.cloud
+
+      - name: Install Argo CD with Helm (Ansible)
+        uses: dawidd6/action-ansible-playbook@v2
+        with:
+          playbook: ansible/playbooks/install-argocd-with-helm.yml
+          options: |
+            --extra-vars "argocd_namespace=argocd"
+            --inventory ansible/inventory/gcp.yml
