change config gcloud/kubectl in app workflow

--- a/.github/workflows/gke-deploy-workflow.yml
+++ b/.github/workflows/gke-deploy-workflow.yml
@@ -1,11 +1,11 @@
 name: Deploy GKE Cluster
 
 on:
-  push:
-    branches:
-      - "main"
-    paths:
-      - 'TerraformOnGCP/GKE/**'
+  # push:
+  #   branches:
+  #     - "main"
+  #   paths:
+  #     - 'TerraformOnGCP/GKE/**'
   workflow_dispatch:
 
 jobs:
