--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -36,12 +36,11 @@ jobs:
             gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
             gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
             kubectl config set-context --current --namespace=default
-            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.cmd-args "config config-helper --format=json"
-            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.cmd-path "$(which gke-gcloud-auth-plugin)"
-            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.'expiry-key' '{.credential.token_expiry}'  # Corrected quoting
-            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.'token-key' '{.credential.access_token}'  # Corrected quoting
+            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.cmd-args --set="config config-helper --format=json"
+            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.cmd-path --set="$(which gke-gcloud-auth-plugin)"
+            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.expiry-key --set='{.credential.token_expiry}'
+            kubectl config set clusters.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.config.token-key --set='{.credential.access_token}'
             kubectl config set users.gke_${{ secrets.GCP_PROJECT_ID }}_us-central1-f_gke-cluster.auth-provider.name "gcp"
-            kubectl get clusterrolebindings
             kubectl get pods -A
 
       - name: Create Argo CD Namespace
