--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -36,13 +36,12 @@ jobs:
             echo $GCP_SA_KEY > $GITHUB_WORKSPACE/gcp-sa-key.json
             gcloud auth activate-service-account --key-file=$GITHUB_WORKSPACE/gcp-sa-key.json
             gcloud config set project cloud-2255
-            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project $GCP_PROJECT
+            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
             kubectl config set-context --current --namespace=default
-            kubectl config set-credentials gke_cloud-2255_us-central1-f_gke-cluster --exec-command=gcloud --exec-namespace=kubernetes.io --exec-api-version=client.authentication.k8s.io/v1alpha1 --exec-arg=--command=gke-gcloud-auth-plugin --exec-arg=-- --exec-arg=get-token --exec-env=GOOGLE_APPLICATION_CREDENTIALS=$GITHUB_WORKSPACE/gcp-sa-key.json
+            kubectl config set-credentials gke_cloud-2255_us-central1-f_gke-cluster --exec-command=gcloud --exec-api-version=client.authentication.k8s.io/v1alpha1 --exec-arg=--command=gke-gcloud-auth-plugin --exec-arg=-- --exec-arg=get-token --exec-env=GOOGLE_APPLICATION_CREDENTIALS=$GITHUB_WORKSPACE/gcp-sa-key.json
             kubectl get pods -A
         shell: bash
         env:
-            GCP_PROJECT: cloud-2255
             GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
             GOOGLE_APPLICATION_CREDENTIALS: $GITHUB_WORKSPACE/gcp-sa-key.json
 
