--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -42,6 +42,9 @@ jobs:
             GCP_SA_KEY: ${{ secrets.GCP_ACCESS_KEY }}
             GOOGLE_APPLICATION_CREDENTIALS: $GITHUB_WORKSPACE/gcp-sa-key.json
 
+      - name: Debug SA key file
+        run: cat $GITHUB_WORKSPACE/gcp-sa-key.json
+
       - name: Create Argo CD Namespace
         run: kubectl create namespace argocd
 
