--- a/.github/workflows/gke-deploy-workflow.yml
+++ b/.github/workflows/gke-deploy-workflow.yml
@@ -1,11 +1,11 @@
 name: Deploy GKE Cluster
 
 on:
-  # push:
-  #   branches:
-  #     - "main"
-  #   paths:
-  #     - 'TerraformOnGCP/GKE/**'
+  push:
+    branches:
+      - "main"
+    paths:
+      - 'TerraformOnGCP/GKE/**'
   workflow_dispatch:
 
 jobs:
@@ -32,7 +32,7 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2 # Corrected version
+        uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}          
 
