--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_ACCESS_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          token_format: 'access_token'
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -33,14 +34,10 @@ jobs:
 
       - name: Configure gcloud and kubectl
         run: |
-            echo $GCP_SA_KEY > $GITHUB_WORKSPACE/gcp-sa-key.json
-            gcloud auth activate-service-account --key-file=$GITHUB_WORKSPACE/gcp-sa-key.json
-            gcloud config set project cloud-2255
-            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project cloud-2255
-        shell: bash
+            gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
         env:
-            GCP_SA_KEY: ${{ secrets.GCP_ACCESS_KEY }}
-            GOOGLE_APPLICATION_CREDENTIALS: $GITHUB_WORKSPACE/gcp-sa-key.json
+            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
 
       - name: Debug SA key file
         run: cat $GITHUB_WORKSPACE/gcp-sa-key.json
