--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -13,6 +13,9 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
+    defaults:
+      run:
+        working-directory: ./TerraformOnGCP/GKE
 
     steps:
       - name: Checkout code
@@ -53,10 +56,13 @@ jobs:
 
       - name: Create Ansible Inventory Directory
         run: mkdir -p ansible/inventory
+
       - name: Set up Terraform # Required for Ansible inventory
         uses: hashicorp/setup-terraform@v2
+
       - name: Initialize Terraform
         run: terraform init
+
       - name: Configure Dynamic Inventory (gcp.yml)
         run: |
           cat <<EOF > ansible/inventory/gcp.yml
