--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -90,9 +90,9 @@ jobs:
         run: ansible-galaxy collection install google.cloud
 
       - name: Install Argo CD with Helm (Ansible)
-        uses: dawidd6/action-ansible-playbook@v2
+        uses: ansible-community.github-action@main
         with:
-          playbook: ansible/playbooks/install-argocd-with-helm.yml  # Corrected path
+          playbook: /home/runner/work/GCP/GCP/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml  # Corrected path
           options: |
             --extra-vars "argocd_namespace=argocd"
             --inventory ansible/inventory/gcp.yml
