Fix: hardcore the absolute path

--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -86,13 +86,13 @@ jobs:
       - name: Debug - List All Files
         run: |
           echo "Current Working Directory: $(pwd)"
-          ls -lR  # List everything recursively
+          ls -lRth
         working-directory: ./TerraformOnGCP/GKE
 
       - name: Install Argo CD with Helm (Ansible)
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: ansible/playbooks/install-argocd-with-helm.yml
+          playbook: /home/runner/work/GCP/GCP/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
           options: |
             --extra-vars "argocd_namespace=argocd"
             --inventory ansible/inventory/gcp.yml
